# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.970 2010/11/17 12:21:02 mpagano Exp $

*git-sources-2.6.37_rc2-r2 (17 Nov 2010)

  17 Nov 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc2-r2.ebuild:
  Version bump

*git-sources-2.6.37_rc2-r1 (17 Nov 2010)
*git-sources-2.6.37_rc2 (17 Nov 2010)

  17 Nov 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc2.ebuild, +git-sources-2.6.37_rc2-r1.ebuild:
  Version bumps

*git-sources-2.6.37_rc2 (16 Nov 2010)

  16 Nov 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc2.ebuild:
  Version bump

*git-sources-2.6.37_rc1-r12 (16 Nov 2010)

  16 Nov 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc1-r12.ebuild:
  Version bump

*git-sources-2.6.37_rc1-r11 (14 Nov 2010)

  14 Nov 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc1-r11.ebuild:
  Version bump

*git-sources-2.6.37_rc1-r10 (13 Nov 2010)

  13 Nov 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc1-r10.ebuild:
  Version bump

*git-sources-2.6.37_rc1-r9 (13 Nov 2010)

  13 Nov 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc1-r9.ebuild:
  Version bump

*git-sources-2.6.37_rc1-r8 (10 Nov 2010)

  10 Nov 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc1-r8.ebuild:
  Version bump

*git-sources-2.6.37_rc1-r7 (09 Nov 2010)

  09 Nov 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc1-r7.ebuild:
  Version bump

*git-sources-2.6.37_rc1-r6 (09 Nov 2010)

  09 Nov 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc1-r6.ebuild:
  Version bump

*git-sources-2.6.37_rc1-r5 (06 Nov 2010)

  06 Nov 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc1-r5.ebuild:
  Version bump

*git-sources-2.6.37_rc1-r4 (06 Nov 2010)

  06 Nov 2010; Mike Pagano <mpagano@gentoo.org>