@@ -17,6 +17,7 @@ DIST patch-2.6.37-rc1-git9.bz2 417099 RMD160 3fbf9fc13eb2815e54de448f48c898b7ffb
 DIST patch-2.6.37-rc1.bz2 11871195 RMD160 2cb9d3fa8ef71b5dea035d712cd7bcb91937898e SHA1 6cc101edfe3ebfd8cef481ef7fbee8ae7a01d101 SHA256 bba4bae12682d1e7bfe337832bbc5488bcdc6726481ef36056543c9b8f106ba2
 DIST patch-2.6.37-rc2-git1.bz2 22088 RMD160 bc2f13327efb19538ba31402f5945110ad43d35b SHA1 4b9166b41140a377691c977cee0f913611047fc1 SHA256 da0fb56224f493e2efbe102f42f1cd22ed8d698f38445cc42347e13b57fa45a1
 DIST patch-2.6.37-rc2-git2.bz2 28806 RMD160 1d96c2413232b310fe6813c7bb9710bf2fd35f4e SHA1 b84e36c024aa198e5bb433d8a1d4b93ec729af92 SHA256 e03e85be5ab7da887744e4f82b80868041adac362c1522a09d5405e03bcbf735
+DIST patch-2.6.37-rc2-git3.bz2 36010 RMD160 b85f000f86d914185c580ce3149545df4bc3aa52 SHA1 af4ee46e4b91032ef008c35406aded24ae7de13a SHA256 04f17039914261098659788baedf04294dc4a5e7aa48ec30b42ea290ba741023
 DIST patch-2.6.37-rc2.bz2 12276375 RMD160 a374ec93fe20519825f92bc69bc1cffc56253415 SHA1 f73bc78c7dfdabef7b97eae7d0f09d8e7c19db41 SHA256 b124356667d6e771dd41215d7e0b0f15b986eb900cc646ba5840cc42479c973f
 EBUILD git-sources-2.6.37_rc1-r1.ebuild 1267 RMD160 9df7a28b891ceec94f30e6ef7af4ff7f12fde8d3 SHA1 0c9421e0a67c51ed7b1089af7d3d0b2f1277ed37 SHA256 7f1bf79c5d813794a0a23c4cb8f29d07aea49e713a7839807af92de0fa6d4e43
 EBUILD git-sources-2.6.37_rc1-r10.ebuild 1268 RMD160 df74e6dc558cd8b4a35a38035b92b0a57119b5f5 SHA1 3d652b231548a9bb7da929bb18b4249af180320b SHA256 637a085edef6fd25dda873392bd3c27f2f1257bc6141aff99dbb0dde743cf78d
@@ -33,13 +34,14 @@ EBUILD git-sources-2.6.37_rc1-r9.ebuild 1267 RMD160 ca94c1e5249acee7e8855fa905a1
 EBUILD git-sources-2.6.37_rc1.ebuild 1264 RMD160 48ab5629cf105deb133cd9190d9b120d6e59369c SHA1 d4c7c6477fe54c1b9eb12c7f771ab78876582fc3 SHA256 de8fd1b8e4b11fd2e53b174779fec4af199af881b47cf222b5ac4f8632010f00
 EBUILD git-sources-2.6.37_rc2-r1.ebuild 1267 RMD160 2295ddc21bfe1d955774a801e31b5c60a0e5cab7 SHA1 8107412282ff69e8bd4e013ea201ca45ceed3d77 SHA256 0ded1acec5360c88cae489ddcd8ff5a057090138a99e2368c7890cc78da2d744
 EBUILD git-sources-2.6.37_rc2-r2.ebuild 1267 RMD160 3ce1f9310587c8b97d0d1b486094aebd7d977ed3 SHA1 ad5b3b9764cc2b3e5b8927002f79a55c965a95c4 SHA256 bf3af8c25e237c2c2f1093bff9b9bf41d7800bba57e998d6b964b8ae0b3f9b2c
+EBUILD git-sources-2.6.37_rc2-r3.ebuild 1267 RMD160 91d252a1b318ec0f08302b9d96a846f126943337 SHA1 68df231418124f9b93ce6c4f9835abbfdecec0e6 SHA256 1076c3777835e9fce229f964726865705bdbb861d92ce8d9c01dcb0202ed88e9
 EBUILD git-sources-2.6.37_rc2.ebuild 1264 RMD160 7e94f2de5efa7ab034f517ca22ab10fd8eb6c6ca SHA1 a09297dd208c78f5c2c63a1eee695122e162bae0 SHA256 78751f1e977311d872bd307e6fa3214572d2eac40705e2328b366c92ac2f7946
-MISC ChangeLog 186214 RMD160 098d1e765365fe2aec383fa10d39b13e27701e42 SHA1 72246e1adbb99a908e6741c681cc73a7d00ae497 SHA256 a9064255437c0f198e96049e45140e755356c4c6db1c5cb3125e2e4773264294
+MISC ChangeLog 186360 RMD160 280d1fe00bdacc1335366eada26b4277edadb413 SHA1 d855aa8e1934e7b60b2b964d4001144a8c8ef163 SHA256 00145b367bb088b8aa117da35b18475b615ddcb55634e512a3b49d8dc9a629ed
 MISC metadata.xml 460 RMD160 a96aabd76f2d713116e9c2b131da3a5a2b09065f SHA1 c050d9450624357dfd0db2b82e16717da7cbca29 SHA256 1cb771bf1cf049ed4ecb8b27e0efd74c765fb016a024403abbfa8a956b842b92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkzjyLMACgkQPDPGULV25OMnpwCfdFe4fMIoOgC7dle34cdjbI7G
-V6AAn2LGb/YL6aVsKt5PUjxDDh6DipgK
-=HA6B
+iEYEARECAAYFAkzkfxcACgkQPDPGULV25OO+kACfQhl5sGWOQOrNgBfGAdEtF/CW
+PgkAnRZ4edixd8lYgDYrTUdcoa2MmOtT
+=Y8XI
 -----END PGP SIGNATURE-----
