@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.970 2010/11/17 12:21:02 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.971 2010/11/18 01:19:09 mpagano Exp $
+
+*git-sources-2.6.37_rc2-r3 (18 Nov 2010)
+
+  18 Nov 2010; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.37_rc2-r3.ebuild:
+  Version bump
 
 *git-sources-2.6.37_rc2-r2 (17 Nov 2010)
 
